Styled the page, added screenshots to projects and replaced placeholder projects

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David Dwight Portfolio</title>
-    <link rel="shortcut icon" type="image/jpg" 
-    href="assets/images/Dave-icon.jpg"/>
-    <link rel="stylesheet" type="text/css" href="index-style.css"/>
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/Dave-icon.jpg" />
+    <link rel="stylesheet" type="text/css" href="index-style.css" />
 </head>
+
 <body>
+
     <header>
         <h1>David Dwight</h1>
         <nav>
@@ -29,41 +31,67 @@
             </ul>
         </nav>
     </header>
+
+    <br id="top-spacer">
+
+    <section class="container" id="resume">
+        <div class="card">
+            <h2>The Front End Developer You've Been Looking For</h2>
+            <br>
+            <img src="assets/images/Dave-icon.jpg" alt="a_picture_of_David">
+            <br>
+            <p>I learned to code from a mixture of college and a University of Pennsylvania Coding Bootcamp</p>
+        </div>
+
+    </section>
+
     <br>
-    <aside id="resume">
-        <h2>The Dev You've Been Looking For</h2>
-        <img src="assets/images/Dave-icon.jpg" alt="a_picture_of_David">
-    </aside>
     <br>
+    <br>
+    
     <section id="examples">
         <h2>Showcasing Some Skill</h2>
-        <!-- Eventually I'd like to have all the examples on their own pages and just link to them here -->
-        <div class="pathway latest" id="refactor">
-            <a href="https://wonderful-poincare-ac36b1.netlify.app/" target="_blank"><img src="assets/images/refactor-icon.png" alt="refactor_project_link"></a>
+        <br>
+        <div class="pathway latest card" id="retail">
+            <p>*My Latest Work*</p>
             <br>
-            <a href="https://wonderful-poincare-ac36b1.netlify.app/" target="_blank">A Website I refactored</a>
+            <a href="https://davedw.github.io/dog-breed-finder/" target="_blank"><img
+                    src="assets/images/dog-adoption-icon.png" alt="dog_adoption_link"></a>
+            <br>
+            <a href="https://davedw.github.io/dog-breed-finder/" target="_blank">Dog Adoption Search Tool</a>
         </div>
-        <div class="pathway" id="jcole">
-            <a href="jcole/JCole-website.html" target="_blank"><img src="assets/images/refactor-icon.png" alt="j.cole_website_link"></a>
+        <div class="pathway card" id="refactor">
+            <a href="https://wonderful-poincare-ac36b1.netlify.app/" target="_blank"><img
+                    src="assets/images/refactor-icon.png" alt="refactor_link"></a>
+            <br>
+            <a href="https://wonderful-poincare-ac36b1.netlify.app/" target="_blank">A Website I Refactored</a>
+        </div>
+        <div class="pathway card" id="jcole">
+            <a href="jcole/JCole-website.html" target="_blank"><img src="assets/images/refactor-icon.png"
+                    alt="j.cole_website_link"></a>
             <br>
             <a href="jcole/JCole-website.html" target="_blank">A Webpage I Made</a>
         </div>
-        <div class="pathway" id="calculator">
-            <a href="calculator/calc.html" target="_blank"><img src="assets/images/refactor-icon.png" alt="calculator_link"></a>
+        <div class="pathway card" id="planner">
+            <a href="https://davedw.github.io/Dwight_Day_Planner/" target="_blank"><img
+                    src="assets/images/day-planner-icon.png" alt="planner_link"></a>
             <br>
-            <a href="calculator/calc.html" target="_blank">My Calculator</a>
+            <a href="https://davedw.github.io/Dwight_Day_Planner/" target="_blank">My Day Planner</a>
         </div>
-        <div class="pathway" id="tic-tac-toe">
-            <a href="tic-tac-toe/ttt.html" target="_blank"><img src="assets/images/refactor-icon.png" alt="tic-tac-toe_link"></a>
+        <div class="pathway card" id="password">
+            <a href="https://davedw.github.io/Dwight_Password_Generator/" target="_blank"><img
+                    src="assets/images/pass-gen-icon.png" alt="passwords_link"></a>
             <br>
-            <a href="tic-tac-toe/ttt.html" target="_blank">A game I made</a>
+            <a href="https://davedw.github.io/Dwight_Password_Generator/" target="_blank">A Password Generator Tool</a>
         </div>
     </section>
     <br>
     <article id="about">
         <h2>Who Am I?</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis autem magni porro commodi quam dolor aliquid aliquam consectetur id recusandae labore voluptatem, sed saepe fuga quasi hic necessitatibus? Repellendus, repudiandae.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis autem magni porro commodi quam dolor aliquid
+            aliquam consectetur id recusandae labore voluptatem, sed saepe fuga quasi hic necessitatibus? Repellendus,
+            repudiandae.
         </p>
 
     </article>
@@ -77,4 +105,5 @@
     </section>
     <script src="index-javascript.js"></script>
 </body>
+
 </html>
