removed the lorem ipsum in the about section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <br>
     <br>
 
-    <h2>Showcasing Some Skill</h2>
+    <h2 id="showcase">Showcasing Some Skill</h2>
     <br>
     <div class="flex" >
         <section id="examples">
@@ -95,11 +95,8 @@
     <br>
     <article id="about">
         <h2>Who Am I?</h2>
-        <img src="assets/images/resume.png">
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis autem magni porro commodi quam dolor aliquid
-            aliquam consectetur id recusandae labore voluptatem, sed saepe fuga quasi hic necessitatibus? Repellendus,
-            repudiandae.
+            I am a developer from Philadelphia, PA. I first gained interest in coding in my senior year of high school when I took my first coding class. from there I expanded my knkowledge through college classes, documentation, online tutorials, and a coding bootcamp. My skills are always expanding, so look forward to seeing this site change periodically.
         </p>
 
     </article>
