fixed the resume link at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <section id="contact">
         <h2>How Can You Reach Me?</h2>
         <p>Here is an up-to-date resume for me from my LinkedIn profile:</p>
-        <a href="https://my.indeed.com/p/davidd-bp3gw3y" target="_blank">Take me to the resume!</a>
+        <a href="assets/images/Resume-David-Dwight-2.pdf" target="_blank">Take me to the resume!</a>
 
 
     </section>
