updated information and created github links for projects

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <section class="container" id="resume">
         <div class="card" data-tilt>
-            <h2>The Front End Developer You've Been Looking For</h2>
+            <h2>The Web Developer You've Been Looking For</h2>
             <br>
             <img src="assets/images/Dave-icon.jpg" alt="a_picture_of_David">
             <br>
@@ -64,12 +64,14 @@
                         src="assets/images/dog-adoption-icon.png" alt="dog_adoption_link"></a>
                 <br>
                 <a href="https://davedw.github.io/dog-breed-finder/" target="_blank">Dog Adoption Search Tool</a>
+                <a href="https://github.com/DaveDw/dog-breed-finder" target="_blank"><i class="bi bi-github"></i></a>
             </div>
             <div class="pathway card" id="refactor" data-tilt>
                 <a href="https://wonderful-poincare-ac36b1.netlify.app/" target="_blank"><img
                         src="assets/images/refactor-icon.png" alt="refactor_link"></a>
                 <br>
                 <a href="https://wonderful-poincare-ac36b1.netlify.app/" target="_blank">A Website I Refactored</a>
+                <a href="https://github.com/DaveDw/Dwight-Refactoring" target="_blank"><i class="bi bi-github"></i></a>
             </div>
             <div class="pathway card" id="jcole" data-tilt>
                 <a href="jcole/JCole-website.html" target="_blank"><img src="assets/images/refactor-icon.png"
@@ -82,13 +84,14 @@
                         src="assets/images/day-planner-icon.png" alt="planner_link"></a>
                 <br>
                 <a href="https://davedw.github.io/Dwight_Day_Planner/" target="_blank">My Day Planner</a>
+                <a href="https://github.com/DaveDw/Dwight_Day_Planner" target="_blank"><i class="bi bi-github"></i></a>
             </div>
             <div class="pathway card" id="password" data-tilt>
                 <a href="https://davedw.github.io/Dwight_Password_Generator/" target="_blank"><img
                         src="assets/images/pass-gen-icon.png" alt="passwords_link"></a>
                 <br>
-                <a href="https://davedw.github.io/Dwight_Password_Generator/" target="_blank">A Password Generator
-                    Tool</a>
+                <a href="https://davedw.github.io/Dwight_Password_Generator/" target="_blank">A Password Generator Tool</a>
+                    <a href="https://github.com/DaveDw/Dwight_Password_Generator" target="_blank"><i class="bi bi-github"></i></a>
             </div>
         </section>
     </div>
@@ -96,14 +99,16 @@
     <article id="about">
         <h2>Who Am I?</h2>
         <p>
-            I am a developer from Philadelphia, PA. I first gained interest in coding in my senior year of high school when I took my first coding class. from there I expanded my knkowledge through college classes, documentation, online tutorials, and a coding bootcamp. My skills are always expanding, so look forward to seeing this site change periodically.
+            I am a developer from Philadelphia, PA. I first gained interest in coding in my senior year of high school when I took my first coding class. from there I expanded my knowledge through college classes, documentation, online tutorials, and a coding bootcamp. My skills are always expanding, so look forward to seeing this site change periodically.
         </p>
 
     </article>
     <br>
     <section id="contact">
         <h2>How Can You Reach Me?</h2>
-        <p>Here is an up-to-date resume for me from my LinkedIn profile:</p>
+        <p>Here is my email address: </p>
+        <p>ddwight16@gmail.com</p>
+        <p>Here is an up-to-date resume for me from my LinkedIn profile: </p>
         <a href="assets/images/Resume-David-Dwight-2.pdf" target="_blank">Take me to the resume!</a>
 
 
