finalized changes for 7 7 22

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
     </div>
     <br>
-    <article id="about">
+    <article id="about" class="card">
         <h2>Who Am I?</h2>
         <p>
             I am a developer from Philadelphia, PA. I first gained interest in coding in my senior year of high school when I took my first coding class. from there I expanded my knowledge through college classes, documentation, online tutorials, and a coding bootcamp. My skills are always expanding, so look forward to seeing this site change periodically.
@@ -104,7 +104,7 @@
 
     </article>
     <br>
-    <section id="contact">
+    <section id="contact" class="card">
         <h2>How Can You Reach Me?</h2>
         <p>Here is my email address: </p>
         <p>ddwight16@gmail.com</p>
